Fixed alignment
Left aligned answers to FAQs for consistency

--- a/src/assets/scss/components/_accordion.scss
+++ b/src/assets/scss/components/_accordion.scss
@@ -31,6 +31,7 @@
   overflow: hidden;
   position: relative;
   width: 100%;
+  text-align: left !important;
 }
 
 .accordion__body--hidden {
